Done working on trip service